# Grapher

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: gaussian2d.py  generate4man.py  manifold.py  plotGraph.py  sine2d.py  volume3d.py  wave2d.py
src/: App.css  App.tsx  Types.ts  Types.tsx  UI.ts  UI.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: graph.rs  lib.rs  main.rs  manifold.rs  similarity.rs  vertex.rs  vtk.rs
