[package]
name = "grapher"
version = "0.1.0"
description = "Grapher backend"
authors = ["rohit"]
edition = "2021"


[lib]
name = "grapher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "*"
rand = "*"
linfa-nn = "0.8"
ndarray = "0.16"
